GNOME Bugzilla – Bug 782978
Tooltips with continuously updating text never appear while hovering over widget
Last modified: 2018-05-02 18:31:44 UTC
Created attachment 352390 [details] Testing intervals of 499 ms and 500 ms If the tooltip text gets updated at an interval smaller than 500 ms (= hover timeout), the tooltip is never displayed. In the attached screencast, I'm testing intervals of 499 ms and 500 ms; the former does not display a tooltip while the latter works as expected.
Created attachment 352391 [details] Example program used in screencast
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gtk/issues/826.