Set the default update interval to 0.5s (workaround for #13536)

There's a bug with tooltips in Gtk if they're updated too often.
Cf https://bugzilla.gnome.org/show_bug.cgi?id=782978

If the value read in the config is below 500ms, default to 500ms.

While here change the GtkSpin to start at 0.5s, and only use 0.1s increments.